import "ProtoBuffer/ComProtocol.proto";
import "ProtoBuffer/ClientToServerCmd.proto";
import "Common/ComDefine.proto";
package ProtoBuf;

//获取邮件列表
message CWGetMailItemListReq
{
	
}

//返回邮件列表
message WCGetMailItemListRsp
{
	repeated MailHead mailHead = 1;
}

//获取邮件详细信息
message CWAskMailReq
{
	optional uint32 mailId = 1;
}

//邮件详细信息返回
message WCAskMailRsp
{
	optional uint32 mailId 							= 1;
	optional bytes content							= 2;			//邮件正文内容
	optional uint32 gold							= 3;			//金币
	optional uint32 diamond							= 4;			//钻石
	optional uint32 bindGold						= 5;			//绑定金币
	optional uint32 bindDiamond						= 6;			//绑定钻石
	optional uint32 sellType						= 7;			//出售的货币类型
	optional uint32 sellNum							= 8;			//出售的价格
	optional MailAttachmentList attachmentList		= 9;			//附件具体内容
}

//是否有未读的邮件
message WCUnReadMailNotify
{
	optional bool hasNew = 1;
}

message MailAttachment
{
	optional uint32 type = 1; //类型 1为装备 2为宠物
	optional uint32 gridIndex = 2; //背包索引
	optional uint32 num = 3; //数量
}

//发送邮件
message CWSendMailReq
{
	optional uint32 mailType = 1; //1是普通邮件 2是交易邮件 3是已经查看或回退的交易邮件 4是系统邮件
	optional bytes targetName = 2;
	optional uint32 targetId = 3;
	optional bytes title = 4;
	optional bytes content = 5;
	optional uint32 sellType = 6;  //交易出售的货币类型
	optional uint32 sellNum = 7; //好意出售的价格
	optional MailAttachment mailAttachment = 8; //附件
}

message WCSendMailRsp
{
	optional uint32 ret = 1;
}

message CWDeleteMailReq
{
	repeated uint32 idList = 1;
}

message WCDeleteMailRsp
{
	repeated uint32 idList = 1;
}

message WCNewMailNotify
{
	optional MailHead mailHead = 1;
}

//提取单个附件邮件
message CWGetMailAttachmentReq
{
	optional uint32 mailId = 1;
}

message GCGetMailAttachmentRsp
{
	optional uint32 ret = 1;
	optional uint32 mailId = 2;
}

//一键提取
message CWGetAllMailAttachmentReq
{
	
}

//一键提取返回
message GCGetAllMailAttachmentRsp
{
	optional uint32 ret = 1;
	repeated uint32 idList = 2;
}

//交易邮件退信
message CWNdrMailReq
{
	optional uint32 mailId = 1;
}

message CWNdrMailRsp
{
	optional uint32 ret = 1;
}

//-------------------- server protocol ------------------
//发送邮件
message WGSendMailReq
{
	optional uint32 charId = 1;
	optional CWSendMailReq req = 2;
}

message GWSendMailReq
{
	optional uint32 mailType = 1;
	optional uint32 sendId = 2;
	optional bytes targetName = 3;
	optional uint32 targetId = 4;
	optional bytes title = 5;
	optional bytes content = 6;
	optional uint32 sellType = 7;
	optional uint32 sellNum = 8;
	optional MailAttachmentList attachment = 9;
}

message WGGetMailAttachmentReq
{
	optional uint32 charId = 1;
	optional uint32 mailId = 2;
	optional uint32 mailType = 3;
	optional uint32 gold = 4;
	optional uint32 bindGold = 5;
	optional uint32 diamond = 6;
	optional uint32 bindDiamond = 7;
	optional uint32 sellType = 8;
	optional uint32 sellNum = 9;
	optional MailAttachmentList attachment = 10;
}

//用于提取附件成功后通知世界服修改邮件数据
message GWUpdateMailNotify
{
	optional uint32 charId = 1;
	repeated uint32 idList = 2;
	optional uint32 ret = 3;
}

//一封邮件的附件数据
message OneMailAttachmentData
{
	optional uint32 mailId = 1;
	optional uint32 gold = 2;
	optional uint32 bindGold = 3;
	optional uint32 diamond = 4;
	optional uint32 bindDiamond = 5;
	optional MailAttachmentList attachment = 6;
}

//通知逻辑服一键领取
message WGGetAllMailAttachmentReq
{
	optional uint32 charId = 1;
	repeated OneMailAttachmentData attachmentDataList = 2;
}

//发送系统邮件
message GWSendSystemMailReq
{
	optional uint32 destId = 1; //接收方ID
	optional bytes title = 2; 
	optional bytes content = 3;
	optional uint32 gold = 4;
	optional uint32 bindGold = 5;
	optional uint32 diamond = 6;
	optional uint32 bindDiamond = 7;
	optional MailAttachmentList attachment = 8;
}